# estructuraDatos-2024

GestorContactos/: AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h  CMakeLists.txt  ComandoManager.cpp  ComandoManager.h  Contacto.cpp  Contacto.h  ExportManager.cpp  ExportManager.h  GrupoContactos.cpp  GrupoContactos.h  HashTable.cpp  HashTable.h  ReporteManager.cpp  ReporteManager.h  main.cpp  makefile
Solitario EDD2024/Solitario2/: CMakeLists.txt  Carta.cpp  Carta.h  Cola.cpp  Cola.h  ListaD.cpp  ListaD.h  Nodo.cpp  Nodo.h  NodoLD.cpp  NodoLD.h  Pila.cpp  Pila.h  main.cpp  makefile
